--- a/css/main.scss
+++ b/css/main.scss
@@ -153,7 +153,7 @@ button:hover{
 }
 header{
     height:100vh;
-    background-image: url(/img/header_bg.webp);
+    // background-image: url(/img/header_bg.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -182,7 +182,7 @@ header{
     }
 }
 .imagefiller{
-    background-image: url(/img/image_two.webp);
+    // background-image: url(/img/image_two.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center right;
@@ -254,7 +254,7 @@ header{
 
 /* MAUTIC FORM STYLE */
 #contact{
-    background-image: url(/img/form_bg.webp);
+    // background-image: url(/img/form_bg.webp);
     background-position: center bottom;
     background-size: cover;
     background-repeat: no-repeat;
